# irs-tax-calculator

./: .gitignore  claude.md  memory.md
backend/: pyproject.toml  requirements.txt
backend/src/api/: analysis_routes.py  exception_handlers.py  main.py  models.py  routes.py
backend/src/data/: tax_year_2024.py
backend/src/database/: db.py  repository.py  schema.sql
backend/src/models/: __init__.py  exceptions.py  filing_status.py  tax_input.py  tax_output.py  workflow_models.py
backend/src/tools/: __init__.py  apply_credit.py  calculate_agi.py  calculate_bracket_tax.py  calculate_capital_gains_tax.py  calculate_fica.py  calculate_niit.py  calculate_qualified_dividend_tax.py  format_currency.py  lookup_standard_deduction.py  preferential_rate.py
backend/src/workflows/: __init__.py  agi_workflow.py  credits_workflow.py  deduction_workflow.py  fica_workflow.py  income_workflow.py  orchestrator.py  summary_workflow.py  tax_computation_workflow.py
backend/tests/database/: test_repository.py
backend/tests/integration/: test_analysis_api.py  test_api.py  test_history_api.py
backend/tests/tools/: test_apply_credit.py  test_calculate_agi.py  test_calculate_bracket_tax.py  test_calculate_capital_gains_tax.py  test_calculate_fica.py  test_calculate_niit.py  test_calculate_qualified_dividend_tax.py  test_format_currency.py  test_lookup_standard_deduction.py
backend/tests/workflows/: test_agi_workflow.py  test_credits_workflow.py  test_deduction_workflow.py  test_fica_workflow.py  test_income_workflow.py  test_tax_computation_workflow.py
frontend/: index.html  (+2 more)
(+31 files in other folders)
